fix(regulations): wrap

--- a/content/regulations/ntpusu/procedure/2016-07-30.md
+++ b/content/regulations/ntpusu/procedure/2016-07-30.md
@@ -4,15 +4,30 @@ shortTitle: 學生自治訴訟法
 note: 105年7月30日修正通過。
 isCurrent: false
 source: 三峽校區學生議會網站法規資料庫。
+belongsTo: 臺北大學學生自治會
+versionOf: 學生自治訴訟法
+version: 2016-07-30
+
 ---
+
 第一章　總則
+
 第1條
+
 　學生法庭審理案件之程序，依本法之規定。
+
 第2條
+
 　學生法庭由學生法官組成，審理下列案件：
+
 一、學生自治規章上各組織機關之權限爭議及其他學生自治規章適用上爭議之案件。
+
 二、學生自治規章違反學生治會自組織章程審查之案件。
+
 三、統一解釋學生自治規章之案件。
+
 四、本會會員或本校各學生團體權益及重大獎懲事宜申訴之案件。
+
 五、其他應由學生法庭審理之案件。
+
 （以下暫略）
