--- a/content/regulations/ntpusu/procedure/2023-06-15.md
+++ b/content/regulations/ntpusu/procedure/2023-06-15.md
@@ -4,16 +4,31 @@ shortTitle: 學生自治訴訟法
 note: 112年6月15日三峽校區學生議會第23屆第9次常會通過、臺北校區審議紀錄缺漏，6月26日總會長公布（總令字第1120626001號令），修正全文共79條。
 isCurrent: false
 source: 三峽校區學生議會網站法規資料庫。
+belongsTo: 臺北大學學生自治會
+versionOf: 學生自治訴訟法
+version: 2023-06-15
 ---
+
 第一章  總則
+
 第1條
+
 　依「國立臺北大學學生自治會組織章程」第63條第三項定之。
+
 　學生法院審理案件之程序，依本法之規定。
+
 第2條
+
 　學生法院由學生法官組成，審理下列案件：
+
 一、關於不服違法自治行為之行政訴訟
+
 二、關於團體間涉及公共事項爭議之仲裁
+
 三、關於規程之解釋與學生自治法令之統一解釋
+
 四、其他自治法規定之由學生法院審理之案件。
+
 　本院司法年度，以學生法官屆次為年。
+
 （以下暫略）
