--- a/content/regulations/hwshsa/articles-of-association/2020-07-14.md
+++ b/content/regulations/hwshsa/articles-of-association/2020-07-14.md
@@ -9,7 +9,7 @@ versionOf: 組織章程
 version: 2020-07-14
 ---
 
-第一章 總則
+## 第一章 總則
 
 第1條
 
@@ -33,7 +33,8 @@ version: 2020-07-14
 第4條
 
 　本會會址設於雲林縣虎尾鎮光復路222號，虎尾高中。
-第二章 會員
+
+## 第二章 會員
 
 第5條
 
@@ -55,7 +56,7 @@ version: 2020-07-14
 
 二、對於本會會務與活動有負責推行之義務。
 
-第三章 組織
+## 第三章 組織
 
 第8條
 
@@ -79,7 +80,7 @@ version: 2020-07-14
 九、器材：負責租借本會所需器材。
 　（以上職位之人選產生方式詳見第四章-代表）
 
-第四章 代表
+## 第四章 代表
 
 第11條
 
@@ -96,7 +97,7 @@ version: 2020-07-14
 
 　本會所有組員每任任期一學年。
 
-第五章 正副會長選舉與罷免
+## 第五章 正副會長選舉與罷免
 
 第14條
 
@@ -120,7 +121,7 @@ version: 2020-07-14
 二、副會長或幹部若任期未滿1學期，則由本會成員於罷免（退職）生效後一個月內，提名適當人選，由班級代表會議1/2以上成員出席，出席者2/3同意後通過新人事案。新人事案通過前，由會長於各幹部中指定適當人選代理。若任期已過1學期，則由代理人逕行代理至該屆任期結束。
 三、若會長、副會長先後因故離職，則由班級代表互推一人擔任代理會長，兩人擔任代理副會長。因此而出缺之班級代表，其補選或代理規定如上述。
 
-第六章 會議
+## 第六章 會議
 
 第18條
 
@@ -132,7 +133,8 @@ version: 2020-07-14
 
 　本會將於開學前討論出該學期班級代表（下稱班代）會議時間，非特殊情況不得取消該會議。班代產生方式由各班自行推派，其具有代表該班級學生共識之權力。本會將於此會議討論議題、蒐集學生意見、協助學校各處室宣導相關事務，本會亦設有線上信箱，由此管道獲得之具名屬實之問題、投訴、建議將全數於班代會議上討論。班代會議討論之結果由學務處訓育組彙整後，簽會各相關處室週知。
 
-第七章 經費
+## 第七章 經費
+
 　本會秉持經費公開透明之原則，其用途及流向將清楚記載於本校主計室請購系統備查。
 
 第20條
@@ -151,7 +153,8 @@ version: 2020-07-14
 第22條
 
 　本會將於每學期第一次班代會議提出年度會務計畫，並於最後一次會議提出年度會務執行報告及經費決算。上述資訊於班代會議公布後，交由學務處保管備查；學務處主管機關得於期中不定期檢視經費運用情形。
-第八章 獎勵
+
+## 第八章 獎勵
 
 第23條
 
