--- a/content/regulations/hwshsa/articles-of-association/2021-02-11.md
+++ b/content/regulations/hwshsa/articles-of-association/2021-02-11.md
@@ -8,7 +8,7 @@ belongsTo: 虎尾高中學生會
 versionOf: 組織章程
 version: 2021-02-11
 ---
-第一章 總則
+## 第一章 總則
 
 第1條
 
@@ -38,7 +38,7 @@ version: 2021-02-11
 
 本會會址設於雲林縣虎尾鎮光復路222號，虎尾高中。
 
-第二章 會員
+## 第二章 會員
 
 第5條
 
@@ -64,7 +64,7 @@ version: 2021-02-11
 
 二、對於本會會務與活動有負責推行之義務。
 
-第三章 學生會組織
+## 第三章 學生會組織
 
 第8條
 
@@ -74,7 +74,7 @@ version: 2021-02-11
 
 訓育組長為指導老師。
 
-第四章 會員代表
+## 第四章 會員代表
 
 會員代表產生方式如第10條與第11條：
 
@@ -116,7 +116,7 @@ version: 2021-02-11
 
 (以上職位之人選產生方式詳見第四章第10條會員代表產生方式)
 
-第五章 正副會長選舉與罷免
+## 第五章 正副會長選舉與罷免
 
 第14條
 
@@ -148,7 +148,7 @@ version: 2021-02-11
 
 三、若會長、副會長先後因故離職，則由班級代表互推一人擔任代理會長，兩人擔任代理副會長。因此而出缺之班級代表，其補選或代理規定如上述。
 
-第六章 會議
+## 第六章 會議
 
 第18條
 
@@ -170,7 +170,7 @@ version: 2021-02-11
 
 三、本會亦設有線上信箱，由此管道獲得之屬實問題、投訴、建議將全數於班代會議上討論。班代會議討論之結果由學務處訓育組彙整後，簽會各相關處室週知。
 
-第七章經費
+## 第七章 經費
 
 本會秉持經費公開透明之原則，其用途及流向將清楚記載於本校主計室請購系統備查。
 
@@ -196,7 +196,7 @@ version: 2021-02-11
 
 本會將於每學期第一次班代會議提出年度會務計畫，並於最後一次會議提出年度會務執行報告及經費決算。上述資訊於班代會議公布後，交由學務處保管備查；學務處主管機關得於期中不定期檢視經費運用情形。
 
-第八章 獎勵
+## 第八章 獎勵
 
 第23條
 
