--- a/content/regulations/hwshsa/articles-of-association/2022-09-20.md
+++ b/content/regulations/hwshsa/articles-of-association/2022-09-20.md
@@ -11,7 +11,7 @@ version: 2022-09-20
 
 虎尾高中學生會受全校學生之付託，為落實本校校訓「公、誠、勤、正」，鞏固校園民主，保障學生權益，增進全校福祉，促進師生交流，弘揚虎中精神，而制定本章程，永矢咸遵。
 
-第一章 總則
+## 第一章 總則
 
 第1條
 
@@ -41,7 +41,7 @@ version: 2022-09-20
 
 　本會決策機構為幹部大會，成員以選舉及徵選之方式產生，任期為一學年。
 
-第二章 會員權利與義務
+## 第二章 會員權利與義務
 
 第6條
 
@@ -71,7 +71,7 @@ version: 2022-09-20
 
 二、會員得繳納經班代大會決議之會費。
 
-第三章 正副會長
+## 第三章 正副會長
 
 第9條
 
@@ -161,7 +161,7 @@ version: 2022-09-20
 
 　會長、副會長由校方頒予當選證書及職務證書，任期結束後表現優良者，正副會長記小功 2 支。因故中途離職，原發放之職務證書應追回，改為核實發放服務時數證明，並列明其任職期間。
 
-第四章 學生會組織
+## 第四章 學生會組織
 
 第23條
 
@@ -255,7 +255,7 @@ version: 2022-09-20
 
 　部長及部員由學生會頒予聘書、校方頒予職務證書，任期結束後表現優良者，部長給予小功 1 支；各組之部員則給予嘉獎 2 支。因故中途離職，原發放之職務證書應追回，改為核實發放服務時數證明，並列明其任職期間。
 
-第五章 會議及立法
+## 第五章 會議及立法
 
 第32條
 
@@ -379,7 +379,7 @@ version: 2022-09-20
 
 　校務會議學生代表人數不足時，正副會長指派會員或班級代表擔任。
 
-第六章 經費
+## 第六章 經費
 
 第54條
 
@@ -411,7 +411,7 @@ version: 2022-09-20
 
 　上述資訊於班代會議公布後，交由學務處保管備查。
 
-第七章 畢業生聯合會
+## 第七章 畢業生聯合會
 
 第58條
 
@@ -431,7 +431,7 @@ version: 2022-09-20
 
 三、協助成立畢業典禮小組，其成員之徵選方式由每一屆畢聯會與指導老師開會決議之。畢業典禮小組之業務為籌辦畢業典禮、畢業舞會、設計畢業紀念衫等，其工作內容與畢聯會不完全重疊，彼此可獨立運作。
 
-第八章 章程之施行與修改
+## 第八章 章程之施行與修改
 
 第61條
 
