--- a/content/regulations/hwshsa/election-act/2022-11-09.md
+++ b/content/regulations/hwshsa/election-act/2022-11-09.md
@@ -8,7 +8,7 @@ belongsTo: 虎尾高中學生會
 versionOf: 選舉法
 version: 2022-11-09
 ---
-第一章 總則
+## 第一章 總則
 
 第1條【立法依據】
 
@@ -38,9 +38,9 @@ version: 2022-11-09
 
 　二、前項對會員之請求，不得向各組候選人提出。
 
-第二章 選舉
+## 第二章 選舉
 
-第一節 選舉人
+### 第一節 選舉人
 
 第5條【選舉人】
 
@@ -72,7 +72,7 @@ version: 2022-11-09
 
 二、正副會長選舉、罷免與創制案、複決案投票同日於同一投票所舉行投票時，選舉人應一次進入投票所投票，離開投票所後不得再次進入投票所投票。
 
-第二節 選舉人名冊
+### 第二節 選舉人名冊
 
 第10條【選舉人名冊】
 
@@ -86,7 +86,7 @@ version: 2022-11-09
 
 選舉人名冊編造完成後，由主管機關公告選舉人人數。
 
-第三節 候選人
+### 第三節 候選人
 
 第13條【候選人之消極資格】
 
@@ -138,7 +138,7 @@ version: 2022-11-09
 
 四、各組候選人應由其中一人到場親自抽籤；各組候選人無人親自到場參加抽籤時，得委託他人持各組候選人之委託書代為抽籤；該組候選人均未親自參加或未委託他人代抽或雖到場經唱名三次後仍不抽籤者，由主管機關代為抽定。
 
-第四節 選舉公告
+### 第四節 選舉公告
 
 第18條【選舉公告】
 
@@ -180,7 +180,7 @@ version: 2022-11-09
 
 　候選人名單公告後，經發現候選人在投票前資格不符第15條之規定者，投票前由主管機關討論通過後撤銷其候選人登記。
 
-第五節 選舉活動
+### 第五節 選舉活動
 
 第21條【選舉活動期】
 
@@ -240,7 +240,7 @@ version: 2022-11-09
 
 候選人有違反本節規定且屢勸不聽者，得由主管機關討論並報班代大會同意後，於選舉前刪除其候選人身分。
 
-第六節 投票及開票
+### 第六節 投票及開票
 
 第27條【設投票所】
 
@@ -348,7 +348,7 @@ version: 2022-11-09
 
 (四)、有其他不正當行為，不服制止。
 
-第七節 選舉結果
+### 第七節 選舉結果
 
 第34條【相對多數決與重行投票】
 
@@ -364,7 +364,7 @@ version: 2022-11-09
 
 三、選舉結果未能當選時，應自投票之日起二週內，完成重行選舉投票。
 
-第三章 附則
+## 第三章 附則
 
 第36條【準用我國法規】
 
