--- a/content/regulations/ntpusu/procedure/2025-06-13.md
+++ b/content/regulations/ntpusu/procedure/2025-06-13.md
@@ -9,7 +9,7 @@ versionOf: 學生自治訴訟法
 version: 2025-06-13
 ---
 
-第一章  總則
+## 第一章  總則
 
 第1條
 
@@ -199,7 +199,7 @@ version: 2025-06-13
 
 　關於法庭之開閉及秩序、法庭之用語、裁判之評議、判斷，準用法院組織法。
 
-第二章 審理原則
+## 第二章 審理原則
 
 第18條
 
@@ -215,7 +215,7 @@ version: 2025-06-13
 
 　前項學生法官調閱之程序，由學生法院定之。
 
-第二章之一 顧問之諮詢
+## 第二章之一 顧問之諮詢
 
 第20條之1（諮詢之容許）
 
@@ -245,7 +245,7 @@ version: 2025-06-13
 
 　學生法院裁判、仲裁協議、解釋、決議與懲戒處分之作成，得援用顧問之諮詢意見而為之。
 
-第三章 行政訴訟程序
+## 第三章 行政訴訟程序
 
 第21條
 
@@ -471,7 +471,7 @@ version: 2025-06-13
 
 　裁判經宣示或公告者，拘束當事人及其他關係人。
 
-第四章 仲裁程序
+## 第四章 仲裁程序
 
 第42條
 
@@ -593,7 +593,7 @@ version: 2025-06-13
 
 　當事人接到仲裁協議後，應即為適當之改善與處置，並應於收到仲裁協議後七日內以書面答復學生法院有關之處理情形。
 
-第五章 解釋程序
+## 第五章 解釋程序
 
 第57條
 
@@ -757,7 +757,7 @@ version: 2025-06-13
 
 　解釋庭應於收案日起六十日內作成解釋或不受理決議，必要時，得延長三十日，延長以一次為限。
 
-第六章 懲戒程序
+## 第六章 懲戒程序
 
 第67條
 
@@ -849,7 +849,7 @@ version: 2025-06-13
 
 　前項之行政訴訟，行政訴訟庭僅就程序不合法或決議違背法令之情形為審查。
 
-第七章 附則
+## 第七章 附則
 
 第78條
 
