feat(content): 詳加說明本版本來源

--- a/content/regulations/hwshsa/articles-of-association/2002-10-14.md
+++ b/content/regulations/hwshsa/articles-of-association/2002-10-14.md
@@ -3,7 +3,7 @@ fullTitle: 國立虎尾高級中學班聯會組織章程
 shortTitle: 班聯會章程
 note: 中華民國 91 年 10 月 14 日修訂
 isCurrent: false
-source: 國教署學生事務暨學生活動資訊網。
+source: 這個版本的全文，來自國教署學生事務暨學生活動資訊網。註：第14條所稱「選舉要點」，原見於學務處網站，但2021年校網改版為數位果子時，資料未隨同轉移，故已佚失。
 belongsTo: 虎尾高中學生會
 versionOf: 組織章程
 version: 2002-10-14
